--- a/finday-web-app/package.json
+++ b/finday-web-app/package.json
@@ -25,6 +25,7 @@
     "angular-svg-icon": "15.0.0",
     "apexcharts": "^3.41.1",
     "ng-apexcharts": "^1.8.0",
+    "ng-zorro-antd": "^16.1.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^3.0.5",
