--- a/finday-web-app/package.json
+++ b/finday-web-app/package.json
@@ -27,6 +27,7 @@
     "ng-apexcharts": "^1.8.0",
     "ng-zorro-antd": "^16.1.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "ng2-currency-mask": "^13.0.3",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^3.0.5",
     "tslib": "^2.3.0",
