--- a/finday-web-app/package.json
+++ b/finday-web-app/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.1",
     "bootstrap": "^5.3.2",
+    "ngx-currency": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
